Live scripting (#9)